--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -7,6 +7,28 @@
 
 @use "github-markdown-css/github-markdown.css";
 @use "@jongwooo/prism-theme-github/themes/prism-github-default-auto.css";
+@use "jbr-doc-styles" as docs;
+
+
+$themes: theme.get-default-themes();
+$light-theme: nth($themes, 1);
+$typography: nth($themes, 3);
+
+$dark-primary: mat.define-palette(mat.$green-palette, 500, 100, 900);
+$dark-accent: mat.define-palette(mat.$amber-palette, 500, 100, 900);
+$dark-warn: mat.define-palette(mat.$red-palette, 500, 100, 900);
+
+$dark-theme: mat.define-dark-theme((
+  color: (
+    primary: $dark-primary,
+    accent: $dark-accent,
+    warn: $dark-warn,
+  ),
+  typography: $typography
+));
+
+@include theme.set-themes($light-theme, $dark-theme, $typography);
+@include theme.set-form-themes($light-theme, $dark-theme);
 
 html {
   box-sizing: border-box;
@@ -14,9 +36,9 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+body {
+  @include docs.setJBRDocVars($light-theme, $dark-theme, $side-menu-width: 320px);
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-@include theme.set-default-themes();
-@include theme.set-default-form-themes();
