added baseuri to be supplied to markdown comp

--- a/libraries/documentor/src/lib/components/markdown/markdown.component.html
+++ b/libraries/documentor/src/lib/components/markdown/markdown.component.html
@@ -3,7 +3,7 @@
   <markdown [hrefListener]="hrefHandler"
             class="markdown-body"
             [ngClass]="{hide: !hasLoaded || hasError}"
-            [src]="'/assets/docs/' + uri"
+            [src]="baseUri + uri"
             [analyticsHrefListener]="'href-link'"
             (load)="onLoad($event)"
             (error)="onError($event)">
