made github link optional

--- a/libraries/documentor/src/lib/components/entity/entity-header/entity-header.component.html
+++ b/libraries/documentor/src/lib/components/entity/entity-header/entity-header.component.html
@@ -2,9 +2,11 @@
 
 <div class="header mat-typography" responsiveContainer>
 
-  @if (entity.content.githubLink; as githubLink) {
-    <jbr-github-btn [path]="githubLink" class="github-link"></jbr-github-btn>
-  }
+  <div>
+    @if (entity.content.githubLink; as githubLink) {
+      <jbr-github-btn [path]="githubLink" class="github-link"></jbr-github-btn>
+    }
+  </div>
 
   <div class="left">
 
