added 10px margin to top of content

--- a/libraries/documentor/src/lib/components/page-container/page-container.component.scss
+++ b/libraries/documentor/src/lib/components/page-container/page-container.component.scss
@@ -4,6 +4,7 @@
   position: relative;
   width: 100%;
   max-width: 1200px;
+  margin-top: 10px;
 
   --jbr-markdown-divider-color: var(--jbr-docs-divider-color, #000000);
 
